Pantalla info proceso terminado

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="text_info_proceso">Información del proceso</string>
     <string name="text_preoperatorio">Preoperatorio.\nAntes de la cirugía.</string>
     <string name="text_postoperatorio">Postoperatorio.\nTras la cirugía.</string>
+    <string name="text_cancer">Cáncer colorrectal</string>
+    <string name="text_proctologia">Proctología</string>
+    <string name="text_suelo">Suelo pélvico</string>
 </resources>
